# dora

./: .gitignore  Cargo.toml  Makefile  README.md  typos.toml
bindings/c/: Cargo.toml  README.md  build.rs
bindings/c/examples/: .gitignore  CMakeLists.txt  README.md  example.c
bindings/c/include/: dora.h
bindings/c/src/: host.rs  lib.rs  tests.rs
crates/dora/: Cargo.toml
crates/dora-cli/: Cargo.toml
crates/dora-cli/src/: main.rs
crates/dora-compiler/: Cargo.toml
crates/dora-compiler/src/: backend.rs  context.rs  errors.rs  intrinsics.rs  lib.rs  module.rs  pass.rs  state.rs  symbols.rs  value.rs
crates/dora-compiler/src/conversion/: builder.rs  mod.rs  rewriter.rs  tests.rs  walker.rs
crates/dora-compiler/src/conversion/snapshots/: dora_compiler__conversion__tests__op_builder.snap  dora_compiler__conversion__tests__rewriter.snap  dora_compiler__conversion__tests__walker.snap  dora_compiler__conversion__tests__walker_with_op_builder.snap  dora_compiler__conversion__tests__walker_with_rewriter.snap  xvm_compiler__conversion__tests__op_builder.snap  xvm_compiler__conversion__tests__rewriter.snap  xvm_compiler__conversion__tests__walker.snap  xvm_compiler__conversion__tests__walker_with_op_builder.snap  xvm_compiler__conversion__tests__walker_with_rewriter.snap
crates/dora-compiler/src/dora/: conversion.rs  gas.rs  memory.rs  mod.rs  pass.rs  storage.rs  utils.rs
crates/dora-compiler/src/dora/instructions/: arithmetic.rs  bitwise.rs  contract.rs  control.rs  data.rs  host.rs  host_env.rs  macros.rs  memory.rs  mod.rs  system.rs
crates/dora-compiler/src/dora/mlir/: storage.mlir
crates/dora-compiler/src/dora/tests/: gas.rs  mod.rs  operations.rs  storage.rs  suspend.rs
crates/dora-compiler/src/dora/tests/snapshots/: dora_compiler__dora__tests__gas__gas_call.snap  dora_compiler__dora__tests__gas__gas_call_data_copy.snap  dora_compiler__dora__tests__gas__gas_call_data_copy.snap.new  dora_compiler__dora__tests__gas__gas_calldata_copy.snap  dora_compiler__dora__tests__gas__gas_create.snap  dora_compiler__dora__tests__gas__gas_push_push_add.snap  dora_compiler__dora__tests__gas__gas_push_push_add.snap.new  dora_compiler__dora__tests__gas__gas_push_push_add_sub.snap  dora_compiler__dora__tests__gas__gas_push_push_add_sub.snap.new  dora_compiler__dora__tests__gas__gas_push_push_exp.snap  dora_compiler__dora__tests__gas__gas_push_push_exp.snap.new  dora_compiler__dora__tests__operations__address.snap  dora_compiler__dora__tests__operations__address.snap.new  dora_compiler__dora__tests__operations__address_balance.snap  dora_compiler__dora__tests__operations__address_balance.snap.new  dora_compiler__dora__tests__operations__basefee.snap  dora_compiler__dora__tests__operations__basefee.snap.new  dora_compiler__dora__tests__operations__blobbasefee.snap  dora_compiler__dora__tests__operations__blobbasefee.snap.new  dora_compiler__dora__tests__operations__blobhash.snap  dora_compiler__dora__tests__operations__blobhash.snap.new  dora_compiler__dora__tests__operations__blockhash.snap  (+520 more)
crates/dora-compiler/src/evm/: backend.rs  conversion.rs  mod.rs  pass.rs  program.rs  symbols.rs  tests.rs
crates/dora-compiler/src/evm/instructions/: arithmetic.rs  bitwise.rs  contract.rs  control.rs  host.rs  host_env.rs  memory.rs  mod.rs  stack.rs  system.rs
crates/dora-compiler/src/evm/snapshots/: dora_compiler__evm__tests__program_from_eof_bytecode.snap  dora_compiler__evm__tests__push0_iszero_pop.snap  dora_compiler__evm__tests__push0_iszero_pop.snap.new  dora_compiler__evm__tests__push0_pop.snap  dora_compiler__evm__tests__push0_pop.snap.new  dora_compiler__evm__tests__push_extcall.snap  dora_compiler__evm__tests__push_push_add.snap  dora_compiler__evm__tests__push_push_add.snap.new  dora_compiler__evm__tests__push_push_mul_div.snap  dora_compiler__evm__tests__push_push_mul_div.snap.new  dora_compiler__evm__tests__push_push_sub.snap  dora_compiler__evm__tests__push_push_sub.snap.new  xvm_compiler__evm__tests__push0_iszero_pop.snap  xvm_compiler__evm__tests__push0_pop.snap  xvm_compiler__evm__tests__push_push_add.snap  xvm_compiler__evm__tests__push_push_mul_div.snap  xvm_compiler__evm__tests__push_push_sub.snap
crates/dora-compiler/src/wasm/: backend.rs  code.rs  conversion.rs  errors.rs  func.rs  intrinsics.rs  meter.rs  mod.rs  pass.rs  state.rs  symbols.rs  ty.rs
crates/dora-compiler/src/wasm/tests/: code.rs  conversion.rs  meter.rs  mod.rs  static_mem_check.rs
crates/dora-primitives/: Cargo.toml
crates/dora-primitives/src/: account.rs  code.rs  config.rs  db.rs  lib.rs  spec.rs  transaction.rs
crates/dora-runtime/: Cargo.toml  build.rs
crates/dora-runtime/src/: account.rs  artifact.rs  call.rs  constants.rs  context.rs  db.rs  env.rs  executor.rs  gas.rs  handler.rs  host.rs  imports.rs  journal.rs  journaled_state.rs  lib.rs  precompiles.rs  result.rs  stack.rs  symbols.rs  transaction.rs  vm.rs  wasm.rs
crates/dora-runtime/src/benches/: bench.rs
crates/dora-runtime/src/precompiles/: sha2_256.mlir
crates/dora-runtime/src/wasm/: context.rs  env.rs  errors.rs  host.rs  libcalls.rs  memory.rs  ptr.rs  trap.rs
crates/dora-tools/: .gitignore  1  Cargo.toml  README.md
crates/dora-tools/bins/blocktest/: main.rs
crates/dora-tools/bins/ethertest/: main.rs
crates/dora-tools/data/blocks/: 18898436.json
crates/dora-tools/src/: lib.rs
crates/dora-tools/src/runners/: ethertest_runner.rs
crates/dora/src/: lib.rs  tests.rs
crates/dora/src/runners/: ethertest_runner.rs  mod.rs
crates/dora/src/tests/: bytecode.rs  operations.rs  results.rs  utils.rs  wasm.rs
crates/dora/src/tests/suites/: address.wat  align.wat  brainfuck.wat
tests/bench/: Cargo.toml  README.md
tests/bench/benches/: bench.rs  precompiles.rs
tests/bench/src/: benches.rs  lib.rs  native.rs
tests/bench/src/contract/: mod.rs
tests/bench/src/contract/erc20/: mod.rs
tests/bench/src/contract/uniswap/: mod.rs
tests/bench/src/contract/uniswapv3/: factory.hex  mod.rs  pool.hex  router.hex  swap.hex  weth.hex
tests/fuzz/: Cargo.toml
tests/fuzz/fuzz_targets/: opcode.rs
(+389 files in other folders)
