[workspace]
members = [ "bindings/c", "crates/*", "tests/bench", "tests/fuzz" ]
default-members = ["crates/dora"]
resolver = "2"

[workspace.dependencies]
dora = { path = "crates/dora" }
dora-ir = { path = "crates/dora-ir" }
dora-compiler = { path = "crates/dora-compiler" }
dora-primitives = { path = "crates/dora-primitives" }
dora-runtime = { path = "crates/dora-runtime" }

mlir-sys = "0.4.2"
melior = { version = "0.20.0", features = ["ods-dialects"] }

[workspace.package]
version = "0.3.1"
edition = "2024"
rust-version = "1.85"
exclude = [".github/"]

[profile.release]
rpath = false
panic = "unwind"
opt-level = "z"
lto = true
debug = false
debug-assertions = false
overflow-checks = false
