[workspace]
members = [ "bindings/c", "crates/*", "tests/bench", "tests/fuzz", "integrations/reth" ]
default-members = ["crates/dora"]
resolver = "2"

[workspace.dependencies]
dora = { path = "crates/dora" }
dora-ir = { path = "crates/dora-ir" }
dora-compiler = { path = "crates/dora-compiler" }
dora-primitives = { path = "crates/dora-primitives" }
dora-runtime = { path = "crates/dora-runtime" }

rayon = "1.5"
mlir-sys = "0.4.2"
melior = { version = "0.20.0", features = ["ods-dialects"] }
hex = "0.4.3"
alloy-sol-types = { version = "1.2.0", default-features = false, features = [
    "std",
] }
revm = { version = "22.0.1", features = ["std", "serde-json"] }

[workspace.package]
version = "0.5.0"
edition = "2024"
rust-version = "1.85"
exclude = [".github/"]

[profile.release]
rpath = false
panic = "unwind"
opt-level = "z"
lto = true
debug = false
debug-assertions = false
overflow-checks = false
