[package]
name = "dora-c"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]
doc = false

[build-dependencies]
cbindgen = "0.26.0"

[dependencies]
dora.workspace = true
evmc-declare = { git = "https://github.com/ethereum/evmc", version = "11.0.0", tag = "v11.0.0" }
evmc-sys = { git = "https://github.com/ethereum/evmc", version = "11.0.0", tag = "v11.0.0" }
evmc-vm = { git = "https://github.com/ethereum/evmc", version = "11.0.0", tag = "v11.0.0" }

rustc-hash = { version = "2.0"}
lazy_static = "1.4.0"

[profile.release]
rpath = false
panic = "unwind"
opt-level = "z"
lto = true
debug = false
debug-assertions = false
overflow-checks = false
