[package]
name = "dora-c"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]
doc = false

[build-dependencies]
cbindgen = "0.28.0"

[dependencies]
dashmap = "6.1.0"
dora.workspace = true
evmc-declare = { git = "https://github.com/ethereum/evmc", version = "12.1.0" }
evmc-sys = { git = "https://github.com/ethereum/evmc", version = "12.1.0" }
evmc-vm = { git = "https://github.com/ethereum/evmc", version = "12.1.0" }

lazy_static = "1.4.0"
