[package]
name = "dora-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
dora-compiler = { workspace = true }
dora-primitives = { workspace = true }
dora-runtime = { workspace = true }
dora-ir = { workspace = true }
dora = { workspace = true }

clap = { version = "4.5.20", features = ["derive"]}
hex = "0.4"
anyhow = "1.0.91"
bytes = { version = "1.6.0", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "dora"
path = "src/main.rs"
doc = false
