[package]
name = "dora-cli"
version.workspace = true
edition.workspace = true

[dependencies]
dora-compiler.workspace = true
dora-primitives.workspace = true
dora-runtime.workspace = true
dora-ir.workspace = true
dora.workspace = true

clap = { version = "4.5.49", features = ["derive"]}
hex = "0.4"
anyhow = "1.0.100"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "dora"
path = "src/main.rs"
doc = false
