[package]
name = "dora-compiler"
version.workspace = true
edition.workspace = true

[dependencies]
dora-ir.workspace = true
dora-primitives.workspace = true
dora-runtime.workspace = true
melior.workspace = true
mlir-sys.workspace = true
rayon.workspace = true

wasmer = "5.0.4"
wasmer-types = "5.0.4"
wasmer-compiler = { version = "6.0.0", features = [
    "translator",
    "compiler",
] }
wasmer-compiler-cli = "5.0.4"
wasmer-vm = "5.0.4"
num-bigint = "0.4.5"
thiserror = "2.0.12"
bitflags = "2.9.0"
anyhow = "1.0.98"
smallvec = "1.15"
hex.workspace = true
hex-literal = "0.4.1"
tracing = "0.1.41"
scopeguard = "1.2.0"
revmc = { git = "https://github.com/paradigmxyz/revmc", default-features = false }
itertools = "0.14"

[dev-dependencies]
hex-literal = "0.4.1"
rstest = "0.25.0"
insta = "1.41.2"
