[package]
name = "dora-compiler"
version.workspace = true
edition.workspace = true

[dependencies]
dora-ir.workspace = true
dora-primitives.workspace = true
dora-runtime.workspace = true
melior.workspace = true
mlir-sys.workspace = true
rayon.workspace = true

wasmer = "6.0.0"
wasmer-types = "6.0.0"
wasmer-compiler = { version = "6.0.0", features = [
    "translator",
    "compiler",
] }
wasmer-compiler-cli = "6.0.0"
wasmer-vm = "6.0.0"
num-bigint = "0.4.5"
thiserror = "2.0.17"
bitflags = "2.10.0"
anyhow = "1.0.100"
smallvec = "1.15"
hex.workspace = true
hex-literal = "1.1.0"
tracing = "0.1.43"
scopeguard = "1.2.0"
revmc = { git = "https://github.com/paradigmxyz/revmc", default-features = false }
itertools = "0.14"

[dev-dependencies]
hex-literal = "1.1.0"
rstest = "0.26.1"
insta = "1.44.3"
