[package]
name = "dora-primitives"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
thiserror = "2.0.9"
serde = { version = "1.0", features = ["derive", "rc"] }
revm-primitives = { version = "15.1.0", features = ["serde"] }
rustc-hash = { version = "2.0"}
alloy-rlp = "0.3.9"
