[package]
name = "dora-primitives"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
thiserror = "2.0.11"
serde = { version = "1.0", features = ["derive", "rc"] }
revm-primitives = { version = "14.0.0", features = ["serde"] }
rustc-hash = { version = "2.1"}
alloy-rlp = "0.3.10"
