[package]
name = "dora-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
dora-primitives.workspace = true
mlir-sys.workspace = true
melior.workspace = true

num-bigint = "0.4.5"
thiserror = "2.0.11"
bitflags = "2.8.0"
hex = "0.4.3"
hex-literal = "0.4.1"
ruint = { version = "1.12.4", default-features = false }
rustc-hash = { version = "2.1" }
anyhow = "1.0.95"
alloy-rlp = "0.3.11"
wasmer = "5.0.4"
wasmer-vm = "5.0.4"
parking_lot = "0.12.3"
scoped-tls = "1.0.1"
sha2 = "0.10.8"
