[package]
name = "dora-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
dora-primitives.workspace = true
mlir-sys.workspace = true
melior.workspace = true

num-bigint = "0.4.5"
thiserror = "2.0.12"
bitflags = "2.9.0"
hex.workspace = true
hex-literal = "0.4.1"
ruint = { version = "1.14.0", default-features = false }
anyhow = "1.0.98"
alloy-rlp = "0.3.11"
wasmer = "6.0.0"
wasmer-vm = "5.0.4"
parking_lot = "0.12.3"
scoped-tls = "1.0.1"
sha2 = "0.10.8"
serde_json = "1.0.140"
