[package]
name = "dora-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
dora-primitives.workspace = true
mlir-sys.workspace = true
melior.workspace = true

num-bigint = "0.4.5"
thiserror = "2.0.12"
bitflags = "2.9.1"
hex.workspace = true
hex-literal = "0.4.1"
ruint = { version = "1.15.0", default-features = false }
anyhow = "1.0.98"
alloy-rlp = "0.3.12"
wasmer = "6.0.0"
wasmer-vm = "6.0.0"
parking_lot = "0.12.4"
scoped-tls = "1.0.1"
sha2 = "0.10.9"
serde_json = "1.0.142"
