[package]
name = "dora-tools"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
dora-compiler = { workspace = true }
dora-primitives = { workspace = true }
dora-runtime = { workspace = true }
dora = { workspace = true }

hex = "0.4.3"
bytes = { version = "1.6.0", features = ["serde"] }
anyhow = "1.0.89"
hex-literal = "0.4.1"
num-bigint = "0.4.5"

indicatif = "0.17"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
walkdir = "2.5"
thiserror = "1.0"
clap = { version = "4.5.20", features = ["derive"]}
tracing = "0.1"
tracing-subscriber = "0.3"
indexmap = "2.6.0"

[[bin]]
name = "dora-ethertest"
path = "src/runners/ethertest_runner.rs"
doc = false
