[package]
name = "dora-tools"
version.workspace = true
edition.workspace = true

[dependencies]
dora-compiler.workspace = true
dora-primitives.workspace = true
dora-runtime.workspace = true
dora.workspace = true

revm.workspace = true
hex.workspace = true
rayon.workspace = true
anyhow = "1.0.100"
hex-literal = "0.4.1"
num-bigint = "0.4.5"

indicatif = "0.18"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
walkdir = "2.5"
thiserror = "2.0"
clap = { version = "4.5.51", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

hash-db = "0.15"
plain_hasher = "0.2"
triehash = "0.8"
k256 = { version = "0.13.3", features = ["ecdsa"] }

alloy-rlp = { version = "0.3.12", features = ["arrayvec"] }

[[bin]]
name = "dora-ethertest"
path = "bins/ethertest/main.rs"
doc = false

[[bin]]
name = "dora-blocktest"
path = "bins/blocktest/main.rs"
doc = false
