[package]
name = "dora"
version.workspace = true
edition.workspace = true

[dependencies]
dora-compiler.workspace = true
dora-primitives.workspace = true
dora-runtime.workspace = true
dora-ir.workspace = true

hex.workspace = true
anyhow = "1.0.98"
hex-literal = "0.4.1"
num-bigint = "0.4.5"
alloy-eip7702 = "0.6.0"

[dev-dependencies]
wasmer = "5.0.4"
alloy-sol-types.workspace = true
