[package]
name = "dora"
version.workspace = true
edition.workspace = true

[dependencies]
dora-compiler.workspace = true
dora-primitives.workspace = true
dora-runtime.workspace = true
dora-ir.workspace = true

hex.workspace = true
anyhow = "1.0.100"
hex-literal = "1.1.0"
num-bigint = "0.4.5"
alloy-eip7702 = "0.6.3"
dashmap = { version = "6.1.0", features = ["inline"] }

[dev-dependencies]
wasmer = "6.0.0"
alloy-sol-types.workspace = true
