[package]
name = "dora-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true

[dependencies]
dora = { workspace = true }
dora-compiler = { workspace = true }
dora-primitives = { workspace = true }
dora-runtime = { workspace = true }

hex = "0.4.3"
hex-literal = "0.4.1"
rustc-hash = { version = "2.1.1"}
ruint = "1.12.4"
alloy-sol-types = { version = "0.8.2", default-features = false, features = [
    "std",
] }
rand = "0.9.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false
doc = false
