[package]
name = "dora-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true

[dependencies]
dora.workspace = true
dora-compiler.workspace = true
dora-primitives.workspace = true
dora-runtime.workspace = true

alloy-sol-types.workspace = true
hex.workspace = true

hex-literal = "0.4.1"
ruint = "1.15.0"
rand = "0.9.1"

[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false
doc = false
