[package]
name = "dora-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true

[dependencies]
dora.workspace = true
dora-compiler.workspace = true
dora-primitives.workspace = true
dora-runtime.workspace = true

alloy-sol-types.workspace = true
hex.workspace = true

hex-literal = "1.1.0"
ruint = "1.17.2"
rand = "0.9.2"

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false
doc = false
