[package]
name = "dora-fuzz"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
dora = { workspace = true }
dora-compiler = { workspace = true }
dora-primitives = { workspace = true }
dora-runtime = { workspace = true }

hex = "0.4.3"
hex-literal = "0.4.1"
libfuzzer-sys = "0.4"
arbitrary = "1.3"

[[bin]]
name = "fuzz"
path = "fuzz_targets/opcode.rs"
test = false
doc = false
bench = false
