[package]
name = "dora-fuzz"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
dora.workspace = true
dora-compiler.workspace = true
dora-primitives.workspace = true
dora-runtime.workspace = true

hex.workspace = true
hex-literal = "1.1.0"
libfuzzer-sys = "0.4"
arbitrary = "1.4"

[[bin]]
name = "fuzz"
path = "fuzz_targets/opcode.rs"
test = false
doc = false
bench = false
